<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/upload_file_name"
            android:layout_marginTop="10dp"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_from_your_library"
            android:id="@+id/choose_from_lib"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:onClick="chooseFromLibrary"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_camera"
            android:id="@+id/use_camera"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:onClick="useCamera"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/upload_comment"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:hint="@string/add_a_comment"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_btn"
            android:id="@+id/upload_now"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:enabled="false"
            android:onClick="uploadNow"/>

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uploading_to_stream_name"
                android:id="@+id/uploadingToStreamLabel"
                android:layout_gravity="center"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="59dp"
                android:textColor="#ff000d"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stream_name_upload"
                android:id="@+id/upload_stream_name"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="80dp"
                android:enabled="true"/>
    </RelativeLayout>

</LinearLayout>